--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/bootstrap.min.css" media="screen">
 
-    <title>Segundo Modelo de Navbar Usando Bootstrap-04</title>
+    <title>Terceiro Modelo de Navbar Usando Bootstrap-04</title>
 </head>
 
 <body>
 
     <!--Inicio da Navbar-->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
      <a class="navbar-brand" href="#">
        <img src="assents/img-logo-menu/logo-01.png" alt="logo-01">
      </a>
@@ -23,7 +23,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-   <ul class="navbar-nav ml-auto">
+   <ul class="navbar-nav mr-auto ml-auto">
      <li class="nav-item active">
        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
      </li>
@@ -45,7 +45,7 @@
        <a class="nav-link disabled" href="#">Disabled</a>
      </li>
    </ul>
-   <form class="form-inline ml-0 ml-lg-5">
+   <form class="form-inline">
      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
      <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
    </form>
