--- a/index.html
+++ b/index.html
@@ -15,15 +15,19 @@
 <body>
 
     <!--Inicio da Navbar-->
+<div class="row justify-content-center">
+  <div class="col-sm-4">
+    <img src="assents/img-logo-menu/logo-04.png" class="img-fluid" alt="logo-04">
+  </div>
+</div>
+
   <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
-     <a class="navbar-brand" href="#">
-       <img src="assents/img-logo-menu/logo-01.png" alt="logo-01">
-     </a>
+
      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-   <ul class="navbar-nav mr-auto ml-auto">
+   <ul class="navbar-nav mr-auto">
      <li class="nav-item active">
        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
      </li>
