--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/bootstrap.min.css" media="screen">
 
-    <title>Terceiro Modelo de Navbar Usando Bootstrap-04</title>
+    <title>Quinto Modelo de Navbar Usando Bootstrap-04</title>
 </head>
 
 <body>
 
     <!--Inicio da Navbar-->
-<div class="row justify-content-center">
+<div class="row justify-content-between">
   <div class="col-sm-4">
     <img src="assents/img-logo-menu/logo-04.png" class="img-fluid" alt="logo-04">
+  </div>
+  <div class="col-sm-4 text-right align-self-center">
+    <a href="#" class="btn btn-link">Inscreva-se</a>
   </div>
 </div>
 
